--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121E), url('../assets/img/conceito-de-rpa-com-tela-de-toque-de-mao-embacada.jpg');
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121E), url('../assets/img/image-header.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
@@ -136,7 +136,7 @@
   background-color: $white-normal;
   box-shadow: 0px -1px 17px rgba(0, 0, 0, 0.45);
   overflow: hidden;
-  min-height: 540px;
+  min-height: 570px;
 
   img {
     min-width: 100%;
@@ -158,10 +158,22 @@
 .system-info {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 16px;
   justify-content: center;
   background-color: $white-normal;
   padding: 16px;
   z-index: 2;
+
+  h3 {
+    text-align: center;
+    color: $primary-normal;
+  }
+
+  p {
+    text-align: center;
+    line-height: 150%;
+  }
 }
 
 .clients {
