--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ i {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121E), url("../assets/img/conceito-de-rpa-com-tela-de-toque-de-mao-embacada.jpg");
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121E), url("../assets/img/image-header.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
@@ -207,7 +207,7 @@ i {
   background-color: #FFF;
   box-shadow: 0px -1px 17px rgba(0, 0, 0, 0.45);
   overflow: hidden;
-  min-height: 540px;
+  min-height: 570px;
 }
 .system img {
   min-width: 100%;
@@ -227,10 +227,20 @@ i {
 .system-info {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 16px;
   justify-content: center;
   background-color: #FFF;
   padding: 16px;
   z-index: 2;
+}
+.system-info h3 {
+  text-align: center;
+  color: #06121E;
+}
+.system-info p {
+  text-align: center;
+  line-height: 150%;
 }
 
 .clients {
